methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move(nbPas: Int,versLAvant: Boolean){
^MethodsArgs:2: error: not found: value nbPas
move(nbPas: Int,versLAvant: Boolean){
     ^MethodsArgs:2: error: not found: value versLAvant
move(nbPas: Int,versLAvant: Boolean){
                ^MethodsArgs:3: error: not found: value versLAvant
  if (versLAvant) {
      ^MethodsArgs:4: error: not found: value nbPas
    avance(nbPas)
           ^MethodsArgs:6: error: not found: value nbPas
    recule(nbPas)
           ^MethodsArgs:8: error: return outside method definition
  return None
  ^